[package]
name = "cheap"
description = "cross platform allocator which communicate over the C ABI"
version = "1.0.1"
edition = "2021"
authors = ["searby-rs <searbyrs@outlook.com>"]
repository = "https://github.com/searby-rs/cheap"
homepage = "https://github.com/searby-rs/cheap"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
libc = { version = "0.2.161", features = ["align"] }
